# frankenstein

./: CHANGELOG.md  Cargo.toml  LICENCE  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: rust.yml  style.yml
.openapi-generator/: FILES
docs/: Animation.md  Audio.md  BotCommand.md  CallbackQuery.md  Chat.md  ChatInviteLink.md  ChatLocation.md  ChatMember.md  ChatMemberUpdated.md  ChatPermissions.md  ChatPhoto.md  ChosenInlineResult.md  Contact.md  DefaultApi.md  Dice.md  Document.md  EncryptedCredentials.md  EncryptedPassportElement.md  Error.md  File.md  Game.md  GameHighScore.md  InlineKeyboardButton.md  InlineKeyboardMarkup.md  InlineObject.md  InlineObject14.md  InlineObject15.md  InlineObject16.md  InlineObject17.md  InlineObject18.md  InlineObject19.md  InlineObject2.md  InlineObject20.md  InlineObject21.md  InlineObject22.md  InlineObject23.md  InlineObject24.md  InlineObject25.md  InlineObject26.md  InlineObject27.md  (+94 more)
examples/: add_stars.rs  add_sticker_to_set.rs  api_trait_implementation.rs  async_custom_client.rs  async_file_upload.rs  async_get_me.rs  async_reply_to_message_updates.rs  create_new_sticker_set.rs  custom_client.rs  file_upload.rs  get-me.rs  get_me.rs  inline_keyboard.rs  reply_keyboard.rs  reply_to_message_updates.rs  upload_sticker_file.rs
src/: api.rs  api_impl.rs  api_params.rs  api_traits.rs  async_api.rs  async_api_impl.rs  client_reqwest.rs  client_ureq.rs  error.rs  games.rs  gifts.rs  inline_mode.rs  input_file.rs  input_media.rs  json.rs  lib.rs  macros.rs  main.rs  methods.rs  objects.rs  parameters.rs  parse_mode.rs  passport.rs  payments.rs  response.rs  stickers.rs  test_json.rs  trait_async.rs  trait_sync.rs  types.rs  updates.rs
src/api/: async_telegram_api_impl.rs  telegram_api_impl.rs
src/api_traits/: async_telegram_api.rs  telegram_api.rs
src/apis/: configuration.rs  default_api.rs  mod.rs
src/models/: animation.rs  audio.rs  bot_command.rs  callback_query.rs  chat.rs  chat_invite_link.rs  chat_location.rs  chat_member.rs  chat_member_updated.rs  chat_permissions.rs  chat_photo.rs  chosen_inline_result.rs  contact.rs  dice.rs  document.rs  encrypted_credentials.rs  encrypted_passport_element.rs  error.rs  file.rs  game.rs  game_high_score.rs  inline_keyboard_button.rs  inline_keyboard_markup.rs  inline_object.rs  inline_object_14.rs  inline_object_15.rs  inline_object_16.rs  inline_object_17.rs  inline_object_18.rs  inline_object_19.rs  inline_object_2.rs  inline_object_20.rs  inline_object_21.rs  inline_object_22.rs  inline_object_23.rs  inline_object_24.rs  inline_object_25.rs  inline_object_26.rs  inline_object_27.rs  inline_object_28.rs  (+94 more)
src/traits/: async_telegram_api.rs  telegram_api.rs
