[package]
name = "frankenstein"
version = "0.32.3"
authors = ["Ayrat Badykov <ayratin555@gmail.com>", "Pepe Márquez <pepe.marquezromero@gmail.com>"]
description = "Telegram bot API client for Rust"
edition = "2021"
license = "WTFPL"
repository = "https://github.com/ayrat555/frankenstein"
readme = "README.md"
keywords = ["request", "http", "client", "bot", "telegram"]
categories = ["web-programming::http-client"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["http-client"]
http-client = ["ureq", "multipart", "mime_guess", "telegram-trait", "serde_json"]
telegram-trait = []
async-http-client = ["reqwest", "tokio", "async-telegram-trait", "serde_json"]
async-telegram-trait = ["async-trait"]

[lints.rust]
unsafe_code = "forbid"
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
derive_partial_eq_without_eq = "warn"
must_use_candidate = "warn"

[[example]]
name = "get_me"
required-features = ["http-client"]

[[example]]
name = "reply_to_message_updates"
required-features = ["http-client"]

[[example]]
name = "reply_keyboard"
required-features = ["http-client"]

[[example]]
name = "inline_keyboard"
required-features = ["http-client"]

[[example]]
name = "custom_client"
required-features = ["http-client"]

[[example]]
name = "async_get_me"
required-features = ["async-http-client"]

[[example]]
name = "async_reply_to_message_updates"
required-features = ["async-http-client"]

[[example]]
name = "async_file_upload"
required-features = ["async-http-client"]

[[example]]
name = "async_custom_client"
required-features = ["async-http-client"]

[[example]]
name = "api_trait_implementation"
required-features = ["telegram-trait"]

[dependencies]
thiserror = "1"
typed-builder = "0.19"

[dependencies.async-trait]
version = "0.1"
optional = true

[dependencies.mime_guess]
version = "2"
optional = true

[dependencies.multipart]
version = "0.18"
default-features = false
features = ["client"]
optional = true

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["multipart", "stream", "rustls-tls"]
optional = true

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1"
optional = true

[dependencies.tokio]
version = "1"
features = ["fs"]
optional = true

[dependencies.ureq]
version = "2"
optional = true

[dev-dependencies]
isahc = "1"
mockito = "1.0"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
